CRY-25 | Clean all prices before storing

--- a/src/collect/get_all_price.ipynb
+++ b/src/collect/get_all_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,7 @@
     "    p.insert(0,'quote', quote)\n",
     "    p.insert(0,'base', base)\n",
     "    p.insert(0,'Symbol', symbol)\n",
+    "    p.drop(columns=['Unused field, ignore'],inplace=True)\n",
     "\n",
     "    # base/quote = price\n",
     "    return p"
@@ -113,13 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols.to_csv(\"symbols.csv\", index_col = False)\n",
-    "data.to_csv(\"data.csv\", index_col = False)\n"
+    "symbols.to_csv(\"../../datastore/symbols.csv\", index=False)\n",
+    "data.to_csv(\"../../datastore/data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
