--- a/src/exploring/Q_Data_Exploration.ipynb
+++ b/src/exploring/Q_Data_Exploration.ipynb
@@ -70,7 +70,6 @@
        "      <th>Number of trades</th>\n",
        "      <th>Taker buy base asset volume</th>\n",
        "      <th>Taker buy quote asset volume</th>\n",
-       "      <th>Unused field, ignore</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -90,7 +89,6 @@
        "      <td>2657</td>\n",
        "      <td>794.6663</td>\n",
        "      <td>57.298344</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -108,7 +106,6 @@
        "      <td>2727</td>\n",
        "      <td>560.9044</td>\n",
        "      <td>40.508977</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -126,7 +123,6 @@
        "      <td>1862</td>\n",
        "      <td>359.8931</td>\n",
        "      <td>25.975732</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -144,7 +140,6 @@
        "      <td>1816</td>\n",
        "      <td>470.6928</td>\n",
        "      <td>33.988586</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -162,7 +157,6 @@
        "      <td>3088</td>\n",
        "      <td>593.4310</td>\n",
        "      <td>42.945939</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -180,10 +174,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229157</th>\n",
+       "      <th>1222237</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -198,10 +191,9 @@
        "      <td>108</td>\n",
        "      <td>2086.0000</td>\n",
        "      <td>9651.160000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229158</th>\n",
+       "      <th>1222238</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -216,10 +208,9 @@
        "      <td>42</td>\n",
        "      <td>1642.0000</td>\n",
        "      <td>7593.482000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229159</th>\n",
+       "      <th>1222239</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -234,10 +225,9 @@
        "      <td>33</td>\n",
        "      <td>2998.0000</td>\n",
        "      <td>13883.738000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229160</th>\n",
+       "      <th>1222240</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -252,10 +242,9 @@
        "      <td>92</td>\n",
        "      <td>7577.0000</td>\n",
        "      <td>35089.087000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229161</th>\n",
+       "      <th>1222241</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -270,11 +259,10 @@
        "      <td>52</td>\n",
        "      <td>1795.0000</td>\n",
        "      <td>8312.645000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1229162 rows × 15 columns</p>\n",
+       "<p>1222242 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -285,11 +273,11 @@
        "3         ETHBTC   ETH   BTC    1669401000000    0.072188    0.072261   \n",
        "4         ETHBTC   ETH   BTC    1669402800000    0.072223    0.072479   \n",
        "...          ...   ...   ...              ...         ...         ...   \n",
-       "1229157  BUSDRON  BUSD   RON    1670943600000    4.629000    4.630000   \n",
-       "1229158  BUSDRON  BUSD   RON    1670945400000    4.620000    4.631000   \n",
-       "1229159  BUSDRON  BUSD   RON    1670947200000    4.631000    4.631000   \n",
-       "1229160  BUSDRON  BUSD   RON    1670949000000    4.630000    4.631000   \n",
-       "1229161  BUSDRON  BUSD   RON    1670950800000    4.631000    4.631000   \n",
+       "1222237  BUSDRON  BUSD   RON    1670943600000    4.629000    4.630000   \n",
+       "1222238  BUSDRON  BUSD   RON    1670945400000    4.620000    4.631000   \n",
+       "1222239  BUSDRON  BUSD   RON    1670947200000    4.631000    4.631000   \n",
+       "1222240  BUSDRON  BUSD   RON    1670949000000    4.630000    4.631000   \n",
+       "1222241  BUSDRON  BUSD   RON    1670950800000    4.631000    4.631000   \n",
        "\n",
        "         Low price  Close price      Volume  Kline Close time  \\\n",
        "0         0.072026     0.072222   1342.1624     1669397399999   \n",
@@ -298,11 +286,11 @@
        "3         0.072161     0.072212    936.2168     1669402799999   \n",
        "4         0.072197     0.072375   1115.5725     1669404599999   \n",
        "...            ...          ...         ...               ...   \n",
-       "1229157   4.620000     4.621000   5984.0000     1670945399999   \n",
-       "1229158   4.620000     4.630000   3618.0000     1670947199999   \n",
-       "1229159   4.630000     4.631000   3254.0000     1670948999999   \n",
-       "1229160   4.630000     4.631000  14415.0000     1670950799999   \n",
-       "1229161   4.630000     4.631000   3875.0000     1670952599999   \n",
+       "1222237   4.620000     4.621000   5984.0000     1670945399999   \n",
+       "1222238   4.620000     4.630000   3618.0000     1670947199999   \n",
+       "1222239   4.630000     4.631000   3254.0000     1670948999999   \n",
+       "1222240   4.630000     4.631000  14415.0000     1670950799999   \n",
+       "1222241   4.630000     4.631000   3875.0000     1670952599999   \n",
        "\n",
        "         Quote asset volume  Number of trades  Taker buy base asset volume  \\\n",
        "0                 96.776126              2657                     794.6663   \n",
@@ -311,26 +299,26 @@
        "3                 67.599402              1816                     470.6928   \n",
        "4                 80.727099              3088                     593.4310   \n",
        "...                     ...               ...                          ...   \n",
-       "1229157        27672.337000               108                    2086.0000   \n",
-       "1229158        16734.982000                42                    1642.0000   \n",
-       "1229159        15069.018000                33                    2998.0000   \n",
-       "1229160        66749.027000                92                    7577.0000   \n",
-       "1229161        17943.045000                52                    1795.0000   \n",
+       "1222237        27672.337000               108                    2086.0000   \n",
+       "1222238        16734.982000                42                    1642.0000   \n",
+       "1222239        15069.018000                33                    2998.0000   \n",
+       "1222240        66749.027000                92                    7577.0000   \n",
+       "1222241        17943.045000                52                    1795.0000   \n",
        "\n",
-       "         Taker buy quote asset volume  Unused field, ignore  \n",
-       "0                           57.298344                     0  \n",
-       "1                           40.508977                     0  \n",
-       "2                           25.975732                     0  \n",
-       "3                           33.988586                     0  \n",
-       "4                           42.945939                     0  \n",
-       "...                               ...                   ...  \n",
-       "1229157                   9651.160000                     0  \n",
-       "1229158                   7593.482000                     0  \n",
-       "1229159                  13883.738000                     0  \n",
-       "1229160                  35089.087000                     0  \n",
-       "1229161                   8312.645000                     0  \n",
+       "         Taker buy quote asset volume  \n",
+       "0                           57.298344  \n",
+       "1                           40.508977  \n",
+       "2                           25.975732  \n",
+       "3                           33.988586  \n",
+       "4                           42.945939  \n",
+       "...                               ...  \n",
+       "1222237                   9651.160000  \n",
+       "1222238                   7593.482000  \n",
+       "1222239                  13883.738000  \n",
+       "1222240                  35089.087000  \n",
+       "1222241                   8312.645000  \n",
        "\n",
-       "[1229162 rows x 15 columns]"
+       "[1222242 rows x 14 columns]"
       ]
      },
      "execution_count": 3,
@@ -339,13 +327,13 @@
     }
    ],
    "source": [
-    "data = pandas.read_csv('../../datastore/data.csv').drop(['Unnamed: 0'], axis=1)\n",
+    "data = pandas.read_csv('../../datastore/data.csv')\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -370,52 +358,46 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>symbol</th>\n",
-       "      <th>price</th>\n",
-       "      <th>percent_change_7d</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>date_added</th>\n",
+       "      <th>status</th>\n",
+       "      <th>baseAsset</th>\n",
+       "      <th>quoteAsset</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>ETH</td>\n",
        "      <td>BTC</td>\n",
-       "      <td>1.680997e+04</td>\n",
-       "      <td>-0.727332</td>\n",
-       "      <td>mineable,pow,sha-256,store-of-value,state-chan...</td>\n",
-       "      <td>2013-04-28T00:00:00.000Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>1.212247e+03</td>\n",
-       "      <td>-0.525129</td>\n",
-       "      <td>pos,smart-contracts,ethereum-ecosystem,coinbas...</td>\n",
-       "      <td>2015-08-07T00:00:00.000Z</td>\n",
+       "      <td>LTCBTC</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>LTC</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>USDT</td>\n",
-       "      <td>9.998771e-01</td>\n",
-       "      <td>-0.021367</td>\n",
-       "      <td>payments,stablecoin,asset-backed-stablecoin,av...</td>\n",
-       "      <td>2015-02-25T00:00:00.000Z</td>\n",
+       "      <td>BNBBTC</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>BNB</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>USDC</td>\n",
-       "      <td>1.000078e+00</td>\n",
-       "      <td>0.012010</td>\n",
-       "      <td>medium-of-exchange,stablecoin,asset-backed-sta...</td>\n",
-       "      <td>2018-10-08T00:00:00.000Z</td>\n",
+       "      <td>NEOBTC</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>NEO</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>BNB</td>\n",
-       "      <td>2.453503e+02</td>\n",
-       "      <td>-2.386593</td>\n",
-       "      <td>marketplace,centralized-exchange,payments,smar...</td>\n",
-       "      <td>2017-07-25T00:00:00.000Z</td>\n",
+       "      <td>QTUMETH</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>QTUM</td>\n",
+       "      <td>ETH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -423,97 +405,65 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4995</th>\n",
-       "      <td>KNK</td>\n",
-       "      <td>1.245115e-01</td>\n",
-       "      <td>1.864619</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-10-31T07:46:39.000Z</td>\n",
+       "      <th>2132</th>\n",
+       "      <td>HOOKBNB</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>HOOK</td>\n",
+       "      <td>BNB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4996</th>\n",
-       "      <td>COGE</td>\n",
-       "      <td>2.670313e-08</td>\n",
-       "      <td>-21.094882</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-07-25T00:00:00.000Z</td>\n",
+       "      <th>2133</th>\n",
+       "      <td>MAGICBTC</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>MAGIC</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4997</th>\n",
-       "      <td>NKCLC</td>\n",
-       "      <td>2.942265e+00</td>\n",
-       "      <td>2.940861</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-12-14T03:52:45.000Z</td>\n",
+       "      <th>2134</th>\n",
+       "      <td>MAGICBUSD</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>MAGIC</td>\n",
+       "      <td>BUSD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>VISION</td>\n",
-       "      <td>4.504223e-01</td>\n",
-       "      <td>-4.122112</td>\n",
-       "      <td>analytics,fantom-ecosystem</td>\n",
-       "      <td>2020-12-17T00:00:00.000Z</td>\n",
+       "      <th>2135</th>\n",
+       "      <td>MAGICUSDT</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>MAGIC</td>\n",
+       "      <td>USDT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4999</th>\n",
-       "      <td>XDOGE</td>\n",
-       "      <td>3.199012e-07</td>\n",
-       "      <td>-78.438887</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-12-14T16:37:05.000Z</td>\n",
+       "      <th>2136</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>TRADING</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5000 rows × 5 columns</p>\n",
+       "<p>2137 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      symbol         price  percent_change_7d  \\\n",
-       "0        BTC  1.680997e+04          -0.727332   \n",
-       "1        ETH  1.212247e+03          -0.525129   \n",
-       "2       USDT  9.998771e-01          -0.021367   \n",
-       "3       USDC  1.000078e+00           0.012010   \n",
-       "4        BNB  2.453503e+02          -2.386593   \n",
-       "...      ...           ...                ...   \n",
-       "4995     KNK  1.245115e-01           1.864619   \n",
-       "4996    COGE  2.670313e-08         -21.094882   \n",
-       "4997   NKCLC  2.942265e+00           2.940861   \n",
-       "4998  VISION  4.504223e-01          -4.122112   \n",
-       "4999   XDOGE  3.199012e-07         -78.438887   \n",
+       "         symbol   status baseAsset quoteAsset\n",
+       "0        ETHBTC  TRADING       ETH        BTC\n",
+       "1        LTCBTC  TRADING       LTC        BTC\n",
+       "2        BNBBTC  TRADING       BNB        BTC\n",
+       "3        NEOBTC  TRADING       NEO        BTC\n",
+       "4       QTUMETH  TRADING      QTUM        ETH\n",
+       "...         ...      ...       ...        ...\n",
+       "2132    HOOKBNB  TRADING      HOOK        BNB\n",
+       "2133   MAGICBTC  TRADING     MAGIC        BTC\n",
+       "2134  MAGICBUSD  TRADING     MAGIC       BUSD\n",
+       "2135  MAGICUSDT  TRADING     MAGIC       USDT\n",
+       "2136    BUSDRON  TRADING      BUSD        RON\n",
        "\n",
-       "                                                   tags  \\\n",
-       "0     mineable,pow,sha-256,store-of-value,state-chan...   \n",
-       "1     pos,smart-contracts,ethereum-ecosystem,coinbas...   \n",
-       "2     payments,stablecoin,asset-backed-stablecoin,av...   \n",
-       "3     medium-of-exchange,stablecoin,asset-backed-sta...   \n",
-       "4     marketplace,centralized-exchange,payments,smar...   \n",
-       "...                                                 ...   \n",
-       "4995                                                NaN   \n",
-       "4996                                                NaN   \n",
-       "4997                                                NaN   \n",
-       "4998                         analytics,fantom-ecosystem   \n",
-       "4999                                                NaN   \n",
-       "\n",
-       "                    date_added  \n",
-       "0     2013-04-28T00:00:00.000Z  \n",
-       "1     2015-08-07T00:00:00.000Z  \n",
-       "2     2015-02-25T00:00:00.000Z  \n",
-       "3     2018-10-08T00:00:00.000Z  \n",
-       "4     2017-07-25T00:00:00.000Z  \n",
-       "...                        ...  \n",
-       "4995  2022-10-31T07:46:39.000Z  \n",
-       "4996  2021-07-25T00:00:00.000Z  \n",
-       "4997  2021-12-14T03:52:45.000Z  \n",
-       "4998  2020-12-17T00:00:00.000Z  \n",
-       "4999  2022-12-14T16:37:05.000Z  \n",
-       "\n",
-       "[5000 rows x 5 columns]"
+       "[2137 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
