--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -595,16 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import Refo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -613,13 +604,192 @@
        "array([1418, 1422, 1425, 1426], dtype=int64)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.groupby(\"Kline open time\").count().Symbol.unique() # the size in each time range is not the same"
+    "data.groupby(\"Kline open time\").count().Symbol.unique() # the size in each time range is not the same\n",
+    "# so what should we do ?\n",
+    "# only take token that have in fully time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check = data.groupby(\"Symbol\").count()[\"Kline open time\"]\n",
+    "full_time_token = check[check == data[\"Kline open time\"].nunique()].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set = data[data.Symbol.isin(full_time_token)].set_index(\"Kline open time\").drop([\"base\",\"quote\",\"Kline Close time\",\"Unused field, ignore\"],axis=1)\n",
+    "time_set = data[\"Kline open time\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data_set.iloc[data_set.Symbol.argsort()].loc[time_set].drop(\"Symbol\",axis=1).to_numpy().flatten().reshape((len(time_set),-1)) # now make all data in a "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(865, 12762)"
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getColOftoken(arr,token:str,col):\n",
+    "    if type(col) != int:\n",
+    "        col = {\"Open price\" : 0,\n",
+    "        \"High price\" : 1,\n",
+    "        \"Low price\" : 2,\n",
+    "        \"Close price\" : 3,\n",
+    "        \"Volume\" :4,\n",
+    "        \"Quote asset volume\" :5,\n",
+    "        \"Number of trades\" :6,\n",
+    "        \"Taker buy base asset volume\" : 7,\n",
+    "        \"Taker buy quote asset volume\" :8}[col]\n",
+    "    return arr[:,full_time_token.to_list().index(token)*9 + col]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_set,y_set =  X[:-1],X[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_set = y_set - X_set > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_set,y_set,test_size=0.3,shuffle=False) #because it time series, so i dont want to split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train,y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred =  y_pred >= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4230769230769231, 0.4927962219570118)"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((y_pred[:,0] == y_test[:,0]).flatten())/ y_test.shape[0] , sum((y_pred == y_test).flatten())/ (y_test.shape[0]* y_test.shape[1])  # đoán toàn bộ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4, 0.5020843128036357)"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((y_pred[:10,0] == y_test[:10,0]).flatten())/ 10 , sum((y_pred[:10] == y_test[:10]).flatten())/ (10* y_test.shape[1]) #chỉ đoán 1 phàn gần tập train nhất"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "xấu hơn cả đoán bừa"
    ]
   },
   {
@@ -646,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
