CRY-33 | Analyse tags

--- a/src/collect/get_all_price.ipynb
+++ b/src/collect/get_all_price.ipynb
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols.to_csv(\"../../datastore/symbols.csv\", index=False)\n",
-    "data.to_csv(\"../../datastore/data.csv\", index=False)"
+    "symbols.to_csv(\"../../datastore/binance_symbols.csv\", index=False)\n",
+    "data.to_csv(\"../../datastore/prices.csv\", index=False)"
    ]
   },
   {
