--- a/src/collect/get_symbols.ipynb
+++ b/src/collect/get_symbols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,7 @@
     "    'symbol', # abbreviation của symbol\n",
     "    'price', # giá hiện tại của symbol theo USD\n",
     "    'percent_change_7d', # phần trăm thay đổi giá của symbol trong 7 ngày qua\n",
+    "    'market_cap', # vốn hoá của symbol theo USD\n",
     "    'tags', # các tag của symbol\n",
     "    'date_added' # ngày thêm vào coinmarketcap\n",
     "]"
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,23 +79,24 @@
     "    symbol_name = symbol['symbol']\n",
     "    price = symbol['quote']['USD']['price']\n",
     "    percent_change_7d = symbol['quote']['USD']['percent_change_7d']\n",
+    "    market_cap = symbol['quote']['USD']['market_cap']\n",
     "    tags = \",\".join(symbol['tags'])\n",
     "    date_added = symbol['date_added']\n",
-    "    return [symbol_name, price, percent_change_7d, tags, date_added]"
+    "    return [symbol_name, price, percent_change_7d, market_cap, tags, date_added]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols = list(map(get_symbol_attr, raw_symbols['data']))\n"
+    "symbols = list(map(get_symbol_attr, raw_symbols['data']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../../datastore/symbols.csv\", index=False)"
+    "df.to_csv(\"../../datastore/coin_market_cap_symbols.csv\", index=False)"
    ]
   }
  ],
