CRY-33 | Add markdown comments

--- a/src/exploring/Q_Tag.ipynb
+++ b/src/exploring/Q_Tag.ipynb
@@ -203,6 +203,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tiền xử lý cho các tags"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -397,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +571,7 @@
        "[11127 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,18 +583,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rank_tags = symbols_with_tags_df.groupby(\"tags\").count()[[\"symbol\"]].sort_values(by=\"symbol\", ascending=False)\n",
-    "rank_tags = rank_tags.reset_index()"
+    "### Group các tags lại và sắp xếp giảm dần theo số lượng"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tags</th>\n",
+       "      <th>symbol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>no tag</td>\n",
+       "      <td>2307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bnb-chain</td>\n",
+       "      <td>573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>defi</td>\n",
+       "      <td>406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>collectibles-nfts</td>\n",
+       "      <td>372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mineable</td>\n",
+       "      <td>335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>food-beverage</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>groestl</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>poi</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>timestamping</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>rpos</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>289 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  tags  symbol\n",
+       "0               no tag    2307\n",
+       "1            bnb-chain     573\n",
+       "2                 defi     406\n",
+       "3    collectibles-nfts     372\n",
+       "4             mineable     335\n",
+       "..                 ...     ...\n",
+       "284      food-beverage       1\n",
+       "285            groestl       1\n",
+       "286                poi       1\n",
+       "287       timestamping       1\n",
+       "288               rpos       1\n",
+       "\n",
+       "[289 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_tags = symbols_with_tags_df.groupby(\"tags\").count()[[\"symbol\"]].sort_values(by=\"symbol\", ascending=False)\n",
+    "rank_tags = rank_tags.reset_index()\n",
+    "rank_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +752,17 @@
           "pow",
           "injective-ecosystem",
           "solana-ecosystem",
-          "avalanche-ecosystem"
+          "avalanche-ecosystem",
+          "governance",
+          "decentralized-exchange-dex-token",
+          "polkadot-ecosystem",
+          "web3",
+          "arbitrum-ecosytem",
+          "masternodes",
+          "exnetwork-capital-portfolio",
+          "privacy",
+          "staking",
+          "medium-of-exchange"
          ],
          "legendgroup": "",
          "name": "",
@@ -657,7 +790,17 @@
           114,
           113,
           109,
-          101
+          101,
+          98,
+          95,
+          91,
+          89,
+          87,
+          85,
+          84,
+          81,
+          80,
+          75
          ]
         }
        ],
@@ -1492,7 +1635,7 @@
     }
    ],
    "source": [
-    "fig = px.pie(rank_tags.head(20), values='symbol', names='tags', title='Coin Market Cap Tags')\n",
+    "fig = px.pie(rank_tags.head(30), values='symbol', names='tags', title='Coin Market Cap Tags')\n",
     "fig.update_traces(textposition='inside', textinfo='percent+label')\n",
     "fig.show()"
    ]
@@ -1501,7 +1644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quan sát được bnb-chain có số lượng coin lớn nhất trong các tag. \n",
+    "### Ngoại trừ những symbol không có tag, ta có thể thấy bnb-chain có số lượng coin lớn nhất trong các tag. \n",
     "> Hãy cùng tìm hiểu các coin có trong bnb-chain"
    ]
   },
@@ -1514,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1787,7 @@
        "[11127 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1698,106 +1841,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1252</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>USDT</td>\n",
-       "      <td>0.999861</td>\n",
-       "      <td>6.623844e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1249</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>USDC</td>\n",
-       "      <td>1.000009</td>\n",
-       "      <td>4.422006e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>817</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>BNB</td>\n",
-       "      <td>243.613912</td>\n",
-       "      <td>3.896979e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>907</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>DOGE</td>\n",
-       "      <td>0.070897</td>\n",
-       "      <td>9.405943e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>889</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>DAI</td>\n",
-       "      <td>0.999559</td>\n",
-       "      <td>5.814973e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1218</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>TANK</td>\n",
-       "      <td>0.006088</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1219</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>TBC</td>\n",
-       "      <td>0.004103</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1220</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>TBCC</td>\n",
-       "      <td>0.015908</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>952</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>FLOKI</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>965</th>\n",
-       "      <td>bnb-chain</td>\n",
-       "      <td>GAT</td>\n",
-       "      <td>0.782491</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>573 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           tags symbol       price    market_cap\n",
-       "1252  bnb-chain   USDT    0.999861  6.623844e+10\n",
-       "1249  bnb-chain   USDC    1.000009  4.422006e+10\n",
-       "817   bnb-chain    BNB  243.613912  3.896979e+10\n",
-       "907   bnb-chain   DOGE    0.070897  9.405943e+09\n",
-       "889   bnb-chain    DAI    0.999559  5.814973e+09\n",
-       "...         ...    ...         ...           ...\n",
-       "1218  bnb-chain   TANK    0.006088  0.000000e+00\n",
-       "1219  bnb-chain    TBC    0.004103  0.000000e+00\n",
-       "1220  bnb-chain   TBCC    0.015908  0.000000e+00\n",
-       "952   bnb-chain  FLOKI    0.000008  0.000000e+00\n",
-       "965   bnb-chain    GAT    0.782491  0.000000e+00\n",
-       "\n",
-       "[573 rows x 4 columns]"
+       "Empty DataFrame\n",
+       "Columns: [tags, symbol, price, market_cap]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1859,7 @@
    "source": [
     "f_symbols_with_tags_df = symbols_with_tags_df[symbols_with_tags_df[\"tags\"] == \"bnb-chain\"] \\\n",
     "    .sort_values(by=\"market_cap\", ascending=False)\n",
-    "f_symbols_with_tags_df"
+    "f_symbols_with_tags_df[f_symbols_with_tags_df[\"symbol\"] == \"BUSD\"]"
    ]
   },
   {
@@ -2724,8 +2778,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ngoài USDT và USDC là stable coin, BNB là coin của bnb-chain nên có lượng vốn hoá lớn nhất vì là coin của sàn (Binance)"
+    "### USDT và USDC là stable coin nên vốn hoá lớn nhất nhì, BNB là coin của chính chuỗi bnb nên có lượng vốn hoá lớn thứ 3 trong bnb-chain"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
